# ipro

./: CHANGELOG.md  CLAUDE.md  DONE.md  PRD.md  PYPI_README.md  README.md  TASKS.md  imgpro.py  ipro.py  pyproject.toml
scripts/: README.md  convert-all.sh  organize-by-orientation.sh  prepare-instagram.sh  rename-all.sh  resize-all.sh
tests/: __init__.py  conftest.py  fixtures.py  test_chain_cli.py  test_chain_helpers.py  test_cli_direct.py  test_convert_cli.py  test_convert_helpers.py  test_info_cli.py  test_info_helpers.py  test_mpo_and_extract.py  test_rename_cli.py  test_rename_helpers.py  test_resize_cli.py  test_resize_helpers.py  test_security.py
