[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ipro-cli"
version = "1.5.1"
description = "CLI tool for responsive image processing"
readme = "PYPI_README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Neil Stoker"},
]
keywords = ["image", "resize", "convert", "webp", "heic", "cli", "responsive", "batch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities",
]
dependencies = [
    "Pillow>=10.0.0",
    "pillow-heif>=0.13.0",
]

[project.scripts]
ipro = "ipro:main"

[project.urls]
Homepage = "https://github.com/cadentdev/ipro"
Repository = "https://github.com/cadentdev/ipro"
Issues = "https://github.com/cadentdev/ipro/issues"

[tool.setuptools]
py-modules = ["ipro"]
